--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="62"
+    android:viewportHeight="63">
+    <group
+        android:scaleX="0.4526984"
+        android:scaleY="0.46"
+        android:translateX="16.966349"
+        android:translateY="17.01">
+        <path
+            android:fillColor="#FFFFFF"
+            android:fillType="evenOdd"
+            android:pathData="M19.368,7.442C20.348,7.013 20.795,5.871 20.367,4.89C19.938,3.91 18.796,3.463 17.815,3.891C11.985,6.441 7.039,10.627 3.554,15.868C2.961,16.76 3.203,17.962 4.094,18.555C4.985,19.147 6.188,18.905 6.78,18.014C9.858,13.386 14.226,9.69 19.368,7.442ZM44.186,3.891C43.205,3.463 42.063,3.91 41.634,4.89C41.205,5.871 41.653,7.013 42.633,7.442C47.775,9.69 52.143,13.385 55.22,18.014C55.813,18.905 57.015,19.147 57.907,18.555C58.798,17.962 59.04,16.76 58.447,15.868C54.962,10.627 50.015,6.441 44.186,3.891ZM50.244,49.315C53.561,45.13 55.542,39.838 55.542,34.083C55.542,20.529 44.555,9.541 31,9.541C17.447,9.541 6.459,20.529 6.459,34.083C6.459,39.837 8.44,45.13 11.757,49.314L6.245,56.113C5.572,56.944 5.699,58.164 6.53,58.838C7.362,59.512 8.582,59.384 9.255,58.553L14.423,52.179C18.79,56.182 24.61,58.624 31,58.624C37.391,58.624 43.211,56.182 47.578,52.179L52.745,58.553C53.419,59.384 54.639,59.512 55.471,58.838C56.302,58.164 56.429,56.944 55.756,56.113L50.244,49.315ZM31,19.229C32.07,19.229 32.938,20.096 32.938,21.166V33.046L39.825,37.637C40.715,38.231 40.956,39.434 40.362,40.324C39.769,41.214 38.566,41.455 37.676,40.861L29.926,35.695C29.387,35.335 29.063,34.73 29.063,34.083V21.166C29.063,20.096 29.93,19.229 31,19.229Z" />
+    </group>
 </vector>
