--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="Theme.CustomSplashScreen" parent="Theme.SplashScreen">
+        <item name="android:windowBackground">@color/primary</item>
+        <item name="postSplashScreenTheme">@style/Theme.Snoozeloo</item>
+    </style>
+
     <style name="Theme.Snoozeloo" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
