--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <!-- Custom Colors -->
-    <color name ="primary">#FF4664FF</color>
-    <color name ="background">#F6F6F6</color>
+    <color name="primary">#FF4664FF</color>
+    <color name="background">#FFF6F6F6</color>
+    <color name="disabled">#FF858585</color>
 </resources>
