wip( to be finished)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="primary">#FF4664FF</color>
     <color name="background">#FFF6F6F6</color>
     <color name="disabled">#FF858585</color>
+    <color name="moreGray">#858585</color>
+    <color name="customBlack">#0D0F19</color>
+
 </resources>
